--- a/src/components/Breakdown/Breakdown.module.css
+++ b/src/components/Breakdown/Breakdown.module.css
@@ -1,8 +1,3 @@
-.root {
-  /* offset the collapsed margin */
-  padding-top: 1.5em;
-}
-
 .list {
   list-style: none;
   padding: 0;
